@@ -1,5 +1,8 @@
 Revision history for Perl extension Module::Build.
 
+ - Made ModuleInfo's _evaluate_version_line() compatible with 'use
+   version ...$VERSION' lines.  [Eric Wilhelm]
+
  - Added some verbiage in Module::Build::API that officially blesses
    the _build/prereqs file for external consumption. [Suggested by Andreas Koenig]
 
